Adjust code to better performance, acessibility, best pratices and SEO

--- a/src/app/pages/clients/clients.component.html
+++ b/src/app/pages/clients/clients.component.html
@@ -11,7 +11,7 @@
       <div class="item" id="logo-tqi">
         <img
           src="../../../assets/clients/tqi-negative.svg"
-          alt="Logo TQI"
+          alt="Logotipo TQI"
           (click)="scripts.openNewTab('https://www.tqi.com.br/')"
         />
       </div>
@@ -19,7 +19,7 @@
       <div class="item" id="logo-roadcard">
         <img
           src="../../../assets/clients/roadcard-negative.svg"
-          alt="Logo Roadcard"
+          alt="Logotipo Roadcard"
           (click)="scripts.openNewTab('https://www.roadcard.com.br/')"
         />
       </div>
@@ -27,7 +27,7 @@
       <div class="item" id="logo-pamcary">
         <img
           src="../../../assets/clients/pamcary-negative.png"
-          alt="Logo Pamcary"
+          alt="Logotipo Pamcary"
           (click)="scripts.openNewTab('https://www.gps-pamcary.com.br/')"
         />
       </div>
@@ -37,7 +37,7 @@
       <div class="item" id="logo-asia">
         <img
           src="../../../assets/clients/asia-negative.svg"
-          alt="Logo Asia Shipping"
+          alt="Logotipo Asia Shipping"
           (click)="scripts.openNewTab('https://www.asiashipping.co/')"
         />
       </div>
@@ -45,7 +45,7 @@
       <div class="item" id="logo-agv">
         <img
           src="../../../assets/clients/agv-negative.svg"
-          alt="Logo AGV Logística"
+          alt="Logotipo AGV Logística"
           (click)="scripts.openNewTab('https://www.agv.com.br/')"
         />
       </div>
@@ -53,7 +53,7 @@
       <div class="item" id="logo-localcred">
         <img
           src="../../../assets/clients/localcred-negative.png"
-          alt="Logo Localcred"
+          alt="Logotipo Localcred"
         />
       </div>
     </div>
