--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -9,7 +9,10 @@
 
   <div class="middle">
     <div routerLink="/">
-      <img src="../../../assets/logo/logo-not-found.png" alt="" />
+      <img
+        src="../../../assets/logo/logo-not-found.png"
+        alt="Logotipo Philipi Bovo Frontend Developer"
+      />
     </div>
   </div>
 
