--- a/src/app/pages/tools/tools.component.html
+++ b/src/app/pages/tools/tools.component.html
@@ -16,7 +16,7 @@
         <div>
           <img
             src="../../../assets/tools/javascript.png"
-            alt="Logo Javascript"
+            alt="Logotipo Javascript"
           />
         </div>
 
@@ -25,7 +25,7 @@
 
       <div class="item">
         <div>
-          <img src="../../../assets/tools/css3.png" alt="Logo CSS3" />
+          <img src="../../../assets/tools/css3.png" alt="Logotipo CSS 3" />
         </div>
 
         <div>CSS 3</div>
@@ -37,7 +37,7 @@
         <div>
           <img
             src="../../../assets/tools/typescript.png"
-            alt="Logo Typescript"
+            alt="Logotipo Typescript"
           />
         </div>
 
@@ -46,7 +46,7 @@
 
       <div class="item">
         <div>
-          <img src="../../../assets/tools/angular.png" alt="Logo Angular" />
+          <img src="../../../assets/tools/angular.png" alt="Logotipo Angular" />
         </div>
 
         <div>Angular</div>
@@ -56,7 +56,7 @@
     <div class="column">
       <div class="item">
         <div>
-          <img src="../../../assets/tools/html5.png" alt="Logo HTML5" />
+          <img src="../../../assets/tools/html5.png" alt="Logotipo HTML 5" />
         </div>
 
         <div>HTML 5</div>
@@ -66,7 +66,7 @@
         <div>
           <img
             src="../../../assets/tools/single-spa.png"
-            alt="Logo Single-SPA"
+            alt="Logotipo Single SPA"
           />
         </div>
 
