--- a/src/app/styles/template-main/mobile.scss
+++ b/src/app/styles/template-main/mobile.scss
@@ -56,7 +56,7 @@ section {
       // #about.portrait .content > .social > .social-icon
       > .social-icon {
         padding: 10px;
-        font-size: 1.3rem;
+        font-size: 1.45rem;
         color: #f7f7f7;
         // #about.portrait .content > .social > .social-icon.light > a
         > a,
@@ -220,7 +220,7 @@ section {
       > div {
         // #tools .content > .title > div:last-child
         &:first-child {
-          color: #f7f7f7;
+          color: #ffffff;
         }
         // #tools .content > .title > div:last-child
         &:last-child {
@@ -322,7 +322,7 @@ section {
     > .title {
       height: 32px;
       font-family: 'Major Mono Display', monospace;
-      color: #116688;
+      color: #0c4a64;
       font-size: 2rem;
     }
     // #projects .content > .main
