--- a/src/app/styles/template-main/desktop.scss
+++ b/src/app/styles/template-main/desktop.scss
@@ -499,7 +499,7 @@ section {
       > div {
         // #tools .content > .title > div:last-child
         &:first-child {
-          color: #f7f7f7;
+          color: #ffffff;
         }
         // #tools .content > .title > div:last-child
         &:last-child {
@@ -773,7 +773,7 @@ section {
       top: 20px;
       left: 20px;
       font-family: 'Major Mono Display', monospace;
-      color: #f7f7f7;
+      color: #ffffff;
       font-size: 3rem;
     }
     // #projects .content > .main
@@ -933,7 +933,7 @@ section {
       color: transparent;
       -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
       -webkit-text-stroke-width: 1px;
-      -webkit-text-stroke-color: white;
+      -webkit-text-stroke-color: #ffffff;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -956,7 +956,7 @@ section {
       > .list {
         margin-left: 200vw;
         width: 100%;
-        color: #f7f7f7;
+        color: #ffffff;
         overflow: hidden;
         scroll-snap-type: x mandatory;
         scroll-behavior: smooth;
@@ -978,9 +978,9 @@ section {
             height: 100%;
             border-radius: 5px;
             cursor: pointer;
-            background: rgba(0, 0, 0, 0.4);
-            -webkit-box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3);
-            box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.3);
+            background: rgba(0, 0, 0, 0.6);
+            -webkit-box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.6);
+            box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.6);
             display: flex;
             flex-direction: column;
             align-items: center;
