--- a/src/app/styles/template-main/desktop.scss
+++ b/src/app/styles/template-main/desktop.scss
@@ -454,6 +454,11 @@ section {
             transition: all 300ms;
           }
         }
+        // #about .content > .main > .item.second
+        &.second {
+          font-size: 16px;
+          font-weight: normal;
+        }
       }
     }
   }
