--- a/src/app/styles/template-main/mobile.scss
+++ b/src/app/styles/template-main/mobile.scss
@@ -106,6 +106,8 @@ section {
         // #about .content > .main > .item.second
         &.second {
           margin-top: 20px;
+          font-size: 16px;
+          font-weight: normal;
         }
       }
     }
